# MGAE---Mason-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  report.md
Demo/: CMakeLists.txt
Demo/data/: MarioPacked.json  demo1.json  demo2.json  demoCollisions.json  demoParticles.json
Demo/src/: DangerousCollisions.h  PlayerController.hpp  main.cpp
Demo_Particles/: CMakeLists.txt
Demo_Particles/data/: demoParticles.json
Demo_Particles/src/: CameraController.hpp  ParticleController.hpp  main.cpp
Demo_Piano/: CMakeLists.txt
Demo_Piano/data/: demoPiano.json
Demo_Piano/src/: ANoteController.hpp  ASharpNoteController.hpp  BNoteController.hpp  CNextNoteController.hpp  CNoteController.hpp  CSharpNoteController.hpp  DNoteController.hpp  DSharpNoteController.hpp  ENoteController.hpp  FNoteController.hpp  FSharpNoteController.hpp  GNoteController.hpp  main.cpp  (+1 more)
Engine/: CMakeLists.txt
Engine/Box2D-master/Box2D/Testbed/Tests/: TestEntries.cpp
Engine/cmake/: FindBox2D.cmake  FindLuaBridge.cmake  FindOPENAL.cmake  FindSDL2_IMAGE.cmake
Engine/exercise/src/: Engine.cpp  GameObject.cpp
Engine/exercisew5/: CMakeLists.txt
Engine/exercisew5/src/: BoxCollider2D.cpp  BoxCollider2D.hpp  Collider.hpp  Collider2D.hpp  Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  Physics.cpp  Physics.h  Physics.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsBody2D.cpp  PhysicsBody2D.hpp  Rendering.cpp  Rendering.h  Scene.cpp  Transform.cpp  Transform.h  picojson.h
Engine/exercisew6-1/exercise 3/src/: Box2DTest.cpp  Box2DTest.hpp  SREDebugDraw.cpp  SREDebugDraw.h
Engine/exercisew7-1/exercise/src/: GameObject.cpp  GameObject.hpp  LonelyZergling.cpp  Mesh.h  Transform.h  main.cpp
Engine/include/: Audio.hpp  Engine.hpp  ParticleEmitter.hpp  Script.hpp  SpriteAtlas.h  Transform.h  picojson.h
Engine/include/Mason/: Audio.hpp  AudioManager.hpp  BoxCollider2D.hpp  Camera.hpp  CircleCollider2D.h  Collider2D.hpp  CollisionListener.h  Component.hpp  Config.hpp  Engine.hpp  GUI.hpp  GameObject.hpp  InputManager.h  LeakDetection.h  ParticleEmitter.hpp  Physics.hpp  PhysicsBody2D.hpp  PlayerController.hpp  Rendering.h  SREDebugDraw.h  Scene.hpp  SceneParser.hpp  Script.hpp  Sprite.h  SpriteAtlas.h  SpriteRenderer.h  Time.hpp  Transform.h
Engine/src/: Audio.cpp  Audio.hpp  AudioListener.hpp  AudioManager.cpp  AudioManager.hpp  AudioMaster.cpp  AudioMaster.hpp  AudioSource.cpp  AudioSource.hpp  BoxCollider2D.cpp  Camera.cpp  CircleCollider2D.cpp  CollisionListener.cpp  Component.cpp  Component.hpp  Config.cpp  Engine.cpp  Engine.hpp  Engine2D.cpp  Engine2D.h  GUI.cpp  GameObject.cpp  GameObject.hpp  InputManage.cpp  InputManage.h  InputManager.cpp  LeakDetection.cpp  LeakDetection.h  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Physics.cpp  Physics.hpp  PhysicsBody.hpp  PhysicsBody2D.cpp  PlayerController.hpp  Rendering.cpp  Rendering.h  SREDebugDraw.cpp  (+19 more)
Game/: CMakeLists.txt  imgui.ini
Game/data/: asteroid.json  car_house_tree.json  game.json
Game/data/images/: asteroids.json  ships_asteroids.json  ships_human_packed.json
Game/data/templates/: asteroid.json  asteroid_big.json  asteroid_medium.json  asteroid_small.json  bullet.json  player.json
Game/src/: Asteroid.h  AsteroidSpawner.h  Player.h  main.cpp
cmake/: FindSDL2.cmake  FindSDL_mixer.cmake
exercise/: frwcdefrcde.txt
(+1132 files in other folders)
